# ChessProject

./: Archer.cpp  Archer.h  BoardPrinter.cpp  BoardPrinter.h  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ConfigReader.cpp  ConfigReader.hpp  GameManager.cpp  GameManager.h  MoveValidator.cpp  MoveValidator.h  Piece.cpp  Piece.h  Portal.cpp  Portal.h  README.md  chess_pieces.json  cppdeneme  cppdeneme.cpp  main.cpp
include/: Position.h
